<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".TemperatureConverter"
    android:weightSum="1">



    <RadioGroup
        android:id="@+id/startGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/to"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crb"
            android:id="@+id/start1"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frb"
            android:id="@+id/start2"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krb"
            android:id="@+id/start3"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rrb"
            android:id="@+id/start4"
            android:layout_gravity="start" />
    </RadioGroup>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userTemp"
        android:layout_below="@+id/textLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        />



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_button"
        android:id="@+id/convert_button"
        android:layout_gravity="bottom"
        android:onClick="convert"
        android:layout_below="@+id/startGroup"
        android:layout_centerHorizontal="true" />


    <RadioGroup
        android:id="@+id/endGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"

        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/userTemp"
        android:layout_alignEnd="@+id/userTemp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crb"
            android:id="@+id/end1"
            android:layout_gravity="start"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frb"
            android:id="@+id/end2"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/krb"
            android:id="@+id/end3"
            android:layout_gravity="start" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rrb"
            android:id="@+id/end4"
            android:layout_gravity="start" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:id="@+id/output"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/convert_text"
        android:id="@+id/textLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Equation"
        android:id="@+id/equationSolution"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/from_text"
        android:id="@+id/from"
        android:layout_above="@+id/startGroup"
        android:layout_alignLeft="@+id/startGroup"
        android:layout_alignStart="@+id/startGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/to_text"
        android:id="@+id/to"
        android:layout_above="@+id/endGroup"
        android:layout_alignLeft="@+id/endGroup"
        android:layout_alignStart="@+id/endGroup" />


</RelativeLayout>